Changes in 3.9.4

1)  Fix port 0 problem (again!).

2)  Fix log_martians.

Changes in 3.9.3

1)  Apply Steven Springl's patch for port checking.

2)  Implement 'optional' interface option.

3)  Fix a couple of bugs in 'owner' handling.

4)  Fix several bugs in address/network detection.

5)  Make a number of interface options binary.

6)  Add wildcard edits in interface processing.

7)  Fix dropInvalid.

8)  Fix 'none'.

9)  Fix SAME with SOURCE $FW

10) Fix tcp:syn.

11) Fix all->z rules with 'NONE' policy.

12) Check for reserved zone names.

13) Add check for firewall zone existance.

14) Add checks for zone existance in 'all' processing.

Changes in 3.9.2

1)  Implement '-C {shell|perl}'.

2)  Implement LOCKFILE

3)  Fix typo in prog.footer.

4)  Fix Shorewall-perl hosts and tcclasses errors.

5)  Add IPPserver macro.

6)  Fix problem with 'stop' and 'clear' when shorewall-shell not
    installed.

7)  Moved lib.dynamiczones to Shorewall.

8)  Fix silly bug in lib.base.

9)  Apply Steven Springl's patch for ICMP.
