@@ -1863,7 +1863,45 @@ do_initialize() {
 	IP_FORWARDING=On
     fi
 
-   [ -n "${BLACKLIST_DISPOSITION:=DROP}" ]
+    if [ -n "$ROUTE_FILTER" ]; then
+	case "$ROUTE_FILTER" in
+	    Yes|yes|YES)
+		ROUTE_FILTER=yes
+		;;
+	    No|no|NO)
+		ROUTE_FILTER=no
+		;;
+	    Keep|keep|KEEP)
+		ROUTE_FILTER=
+		;;
+	    *)
+		startup_error "Invalid value ($ROUTE_FILTER) for ROUTE_FILTER"
+		;;
+	esac
+    else
+	ROUTE_FILTER=yes
+    fi
+
+    if [ -n "$LOG_MARTIANS" ]; then
+	case "$LOG_MARTIANS" in
+	    Yes|yes|YES)
+		LOG_MARTIANS=yes
+		;;
+	    No|no|NO)
+		LOG_MARTIANS=no
+		;;
+	    Keep|keep|KEEP)
+		LOG_MARTIANS=
+		;;
+	    *)
+		startup_error "Invalid value ($LOG_MARTIANS) for LOG_MARTIANS"
+		;;
+	esac
+    else
+	LOG_MARTIANS=yes
+    fi
+
+    [ -n "${BLACKLIST_DISPOSITION:=DROP}" ]
 
     case "$CLAMPMSS" in
 	[0-9]*)
@@ -1874,8 +1912,6 @@ do_initialize() {
     esac
 
     ADD_SNAT_ALIASES=$(added_param_value_no ADD_SNAT_ALIASES $ADD_SNAT_ALIASES)
-    ROUTE_FILTER=$(added_param_value_no ROUTE_FILTER $ROUTE_FILTER)
-    LOG_MARTIANS=$(added_param_value_no LOG_MARTIANS $LOG_MARTIANS)
     DETECT_DNAT_IPADDRS=$(added_param_value_no DETECT_DNAT_IPADDRS $DETECT_DNAT_IPADDRS)
 
     MACLIST_TARGET=reject
