@@ -22,9 +22,17 @@ Problems corrected in 3.9.4.
 
 2)  logmartions=0 was being treated the same as logmartians=1.
 
+3)  arp_ignore caused an internal error in validate_interfaces_file().
+
 Other changes in Shorewall 3.9.4
 
-None.
+1)  The LOG_MARTIANS and ROUTE_FILTER options are not tri-valued.
+
+	Yes -  Same as before
+	No  -  Same as before except that it applies regardless of
+	       whether any interfaces have the logmartians/routefilter
+	       option
+	Keep - Shorewall ignores the option entirely.
 
 Migration Considerations:
 
