@@ -4,6 +4,10 @@ Changes in 3.9.4
 
 2)  Fix log_martians.
 
+3)  Make LOG_MARTIANS and ROUTE_FILTER tri-valued.
+
+4)  Fix arp_ignore.
+
 Changes in 3.9.3
 
 1)  Apply Steven Springl's patch for port checking.
